feat: hero color change

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
         </div>
 
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-xl navbar-dark bg-white py-4" data-aos="fade-down">
+        <nav class="navbar navbar-expand-xl navbar-light bg-white py-xl-4 py-3" data-aos="fade-down">
             <div class="container">
                 <!-- Logo Section (visible on extra large screens) -->
                 <div class="logo-section d-xl-none d-inline">
-                    <a title="Logo Navigation" href="/index.html"><img class="logo" src="/img/logo.png"
+                    <a title="Logo Navigation" href="/index.html"><img class="logo" src="/img/logo-text-normal.png"
                             alt="Logo Image"></a>
                 </div>
                 <!-- Navbar Toggler for mobile -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                <button class="navbar-toggler text-white" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fa-solid fa-bars text-dark"></i>
                 </button>
 
                 <!-- Offcanvas for mobile -->
@@ -131,7 +131,7 @@
 
 
         <!-- Hero Section -->
-        <div class="hero bg-primary" data-aos="fade-down">
+        <div class="hero bg-xl-primary" data-aos="fade-down">
             <!-- Container for Hero Content -->
             <div class="container-fluid hero-content">
                 <div class="info-side">
@@ -167,6 +167,8 @@
 
             </div>
         </div>
+         <!-- Background Image behind hero sections -->
+         <img class="hero-img" src="/img/mowing-grass.jpg" alt="Hero background Image">
         <!-- /Hero Section -->
     </section>
 
