feat: theme 3 completed

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                 <div class="top-information" data-aos="fade-down">
                     <div class="d-md-block d-none">
                         <a title="Location" href="#">
-                            <i class="fa-solid fa-location-dot text-primary pe-2"></i> Location
+                            <i class="fa-solid fa-location-dot text-white pe-2"></i> Location
                         </a>
                     </div>
                     <div class="d-xl-block d-none">
@@ -42,7 +42,7 @@
                     </div>
                     <div>
                         <a title="Phone Number" href="tel:+11111111111">
-                            <i class="fa-solid fa-phone-volume text-primary pe-2"></i> +1 (111) 111-1111
+                            <i class="fa-solid fa-phone-volume text-white pe-2"></i> +1 (111) 111-1111
                         </a>
                     </div>
                 </div>
@@ -50,17 +50,17 @@
         </div>
 
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-xl navbar-dark" data-aos="fade-down">
+        <nav class="navbar navbar-expand-xl navbar-dark py-xl-4 py-3" data-aos="fade-down">
             <div class="container">
                 <!-- Logo Section (visible on extra large screens) -->
                 <div class="logo-section d-xl-none d-inline">
-                    <a title="Logo Navigation" href="/index.html"><img class="logo" src="/img/logo.png"
+                    <a title="Logo Navigation" href="/index.html"><img class="logo" src="/img/logo-text-normal.png"
                             alt="Logo Image"></a>
                 </div>
                 <!-- Navbar Toggler for mobile -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fa-solid fa-bars text-white"></i>
                 </button>
 
                 <!-- Offcanvas for mobile -->
@@ -128,13 +128,12 @@
             <!-- /Container -->
         </nav>
         <!-- /Navbar -->
-
         <!-- Hero Section -->
         <div class="hero" data-aos="fade-down">
             <!-- Container for Hero Content -->
-            <div class="container hero-content py-3 pb-5">
+            <div class="container hero-content py-5 pb-5">
                 <!-- Main Heading -->
-                <h1 class="text-center">Contact Us</h1>
+                <h1 class="text-center mx-auto">Contact Us</h1>
 
             </div>
         </div>
@@ -154,7 +153,7 @@
                     <h4 class="text-center">Company Name</h4>
                     <ul>
                         <!-- Location -->
-                        <p class="unit"> <i class="fa-solid fa-location-dot me-3 fs-28 text-primary"></i>
+                        <p class="unit"> <i class="fa-solid fa-location-dot me-3 fs-28 text-success"></i>
                             <span>
                                 Location
                             </span></a>
@@ -162,14 +161,14 @@
 
                         <!-- Phone Number -->
                         <a title="Phone Number" class="unit" href="tel:+11111111111"> <i
-                                class="fa-solid fa-phone me-3 fs-28 text-primary"></i>
+                                class="fa-solid fa-phone me-3 fs-28 text-success"></i>
                             +1 (111) 111-1111
                         </a>
 
                         <!-- Facebook -->
                         <a class="unit" title="Facebook Navigation" class=" d-flex align-items-center" target="_blank"
                             href="#">
-                            <i class="fs-24 fa-brands fa-facebook fs-28 me-3 text-primary"></i>
+                            <i class="fs-24 fa-brands fa-facebook fs-28 me-3 text-success"></i>
                             Facebook
                         </a>
                     </ul>
@@ -231,7 +230,6 @@
         </div>
     </section>
 
-
     <!-- Footer -->
     <footer class="position-relative pt-3">
         <div class="container mt-5">
@@ -266,19 +264,19 @@
                     <div class="footer-nav">
                         <!-- Phone Number -->
                         <p class="d-flex mb-3 justify-content-lg-end">
-                            <i class="fs-20 fa-solid fa-phone me-3 text-primary"></i>
+                            <i class="fs-20 fa-solid fa-phone me-3 text-success"></i>
                             <a class="link" title="Footer Phone Number" href="tel:+11111111111"> +1 (111) 111-1111 </a>
                         </p>
 
                         <!-- Location -->
                         <p class="d-flex justify-content-lg-end">
-                            <i class="fa-solid fa-location-dot fs-20 me-3 text-primary"></i>
+                            <i class="fa-solid fa-location-dot fs-20 me-3 text-success"></i>
                             <span> Location</span>
                         </p>
 
                         <!-- Facebook -->
                         <a title="Facebook Navigation" class=" d-flex align-items-center justify-content-lg-end link"
-                            target="_blank" href="#"><i class="fs-22 fa-brands fa-facebook me-3 text-primary"></i>
+                            target="_blank" href="#"><i class="fs-22 fa-brands fa-facebook me-3 text-success"></i>
                             Facebook</a>
 
                     </div>
