--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <!-- Navabr and Hero Section -->
-    <section class="nav-hero position-relative" style="overflow: visible !important; overflow-x: hidden;">
+    <section class="nav-hero position-relative mb-0" style="overflow: visible !important; overflow-x: hidden;">
         <!-- Upper Navbar -->
         <div class="top-information-div bg-primary">
             <div class="container">
@@ -134,28 +134,29 @@
         <div class="hero bg-xl-primary" data-aos="fade-down">
             <!-- Container for Hero Content -->
             <div class="container-fluid hero-content">
-                <div class="info-side">
+                <div class="info-side position-relative">
+                    <img class="info-bg" src="/img/hero-info-bg.jpg" alt="lawn with texture">
                     <div class="additional-header-info ">
                         <p>Commercial & Residential Services</p>
                     </div>
                     <!-- Main Heading -->
-                    <h1 class="text-start">Providing the best <span>Lawn Services</span> in <span> Your Location</span>
+                    <h1 class="text-sm-start text-center">Providing the best <span>Lawn Services</span> in <span> Your Location</span>
                     </h1>
 
                     <!-- Hero Information -->
-                    <p class="hero-info">Expert Lawn Care and Landscaping Services for Your Home or Business. Keep Your
+                    <p class="hero-info text-sm-start text-center">Expert Lawn Care and Landscaping Services for Your Home or Business. Keep Your
                         Property Beautiful and Safe! Call Today for free estimate</p>
 
                     <!-- Call to Action Buttons -->
                     <div class="d-flex mt-lg-5 mt-4 justify-content-start">
-                        <div class="mt-2 text-center d-flex flex-sm-row flex-column">
+                        <div class="mt-2 text-center w-100 d-flex justify-content-sm-start justify-content-center flex-vm-row flex-column">
                             <!-- Call Now Button -->
                             <a title="Call Now to Learn More"
-                                class="btn btn-primary rounded-1 fs-19 text-uppercase px-5 fw-600 me-sm-4 mb-sm-0 mb-4"
+                                class="btn btn-primary rounded-1 fs-19 text-uppercase px-sm-5 px-4 fw-600 me-vm-4 mb-vm-0 mb-4"
                                 href="tel:+11111111111">Call Now</a>
 
                             <!-- Secondary Button -->
-                            <a title="Second CTA" class="btn btn-secondary rounded-1 fs-19 text-uppercase px-5 fw-600"
+                            <a title="Second CTA" class="btn btn-secondary rounded-1 fs-19 text-uppercase px-sm-5 px-4 fw-600"
                                 href="#">Second
                                 CTA</a>
                         </div>
@@ -174,8 +175,8 @@
 
 
     <!-- Social Media Ratings -->
-    <div class="position-relative ratings-div" data-aos="fade-up">
-        <div class="ratings-grid mt-5 container">
+    <section class="position-relative ratings-div" data-aos="fade-up">
+        <div class="ratings-grid container">
             <!-- Facebook Rating -->
             <a class="ratings-card" title="Facebook Navigation" target="_blank" href="#">
                 <img src="/img/facebook.png" alt="facebook logo">
@@ -210,7 +211,7 @@
                 </p>
             </a>
         </div>
-    </div>
+    </section>
 
 
     <!-- About -->
@@ -254,7 +255,8 @@
     </section>
 
     <!-- Services Start -->
-    <section class="services">
+    <section class="services primary-overlay position-relative">
+        <img class="bg-img" src="/img/services-bg.jpg" alt="Lawn Mower">
         <div class="container">
             <h2 class="header text-center">Our Services</h2>
             <div class="service-grid">
@@ -758,19 +760,19 @@
                     <div class="footer-nav">
                         <!-- Phone Number -->
                         <p class="d-flex mb-3 justify-content-lg-end">
-                            <i class="fs-20 fa-solid fa-phone me-3 text-primary"></i>
+                            <i class="fs-20 fa-solid fa-phone me-3 text-success"></i>
                             <a class="link" title="Footer Phone Number" href="tel:+11111111111"> +1 (111) 111-1111 </a>
                         </p>
 
                         <!-- Location -->
                         <p class="d-flex justify-content-lg-end">
-                            <i class="fa-solid fa-location-dot fs-20 me-3 text-primary"></i>
+                            <i class="fa-solid fa-location-dot fs-20 me-3 text-success"></i>
                             <span> Location</span>
                         </p>
 
                         <!-- Facebook -->
                         <a title="Facebook Navigation" class=" d-flex align-items-center justify-content-lg-end link"
-                            target="_blank" href="#"><i class="fs-22 fa-brands fa-facebook me-3 text-primary"></i>
+                            target="_blank" href="#"><i class="fs-22 fa-brands fa-facebook me-3 text-success"></i>
                             Facebook</a>
 
                     </div>
