--- a/inner-page.html
+++ b/inner-page.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <!-- Navabr and Hero Section -->
+    <!-- Navbar and Hero Section -->
     <section class="nav-hero inner-page position-relative" style="overflow: visible !important; overflow-x: hidden;">
             <!-- Upper Navbar -->
             <div class="top-information-div">
@@ -33,7 +33,7 @@
                     <div class="top-information" data-aos="fade-down">
                         <div class="d-md-block d-none">
                             <a title="Location" href="#">
-                                <i class="fa-solid fa-location-dot text-white pe-2"></i> Location
+                                <i class="fa-solid fa-location-dot pe-2"></i> Location
                             </a>
                         </div>
                         <div class="d-xl-block d-none">
@@ -42,7 +42,7 @@
                         </div>
                         <div>
                             <a title="Phone Number" href="tel:+11111111111">
-                                <i class="fa-solid fa-phone-volume text-white pe-2"></i> +1 (111) 111-1111
+                                <i class="fa-solid fa-phone-volume pe-2"></i> +1 (111) 111-1111
                             </a>
                         </div>
                     </div>
@@ -400,7 +400,7 @@
     </section>
 
     <!-- Testimonials -->
-    <section class="testimonials primary-overlay">
+    <section class="testimonials primary-overlay mb-0">
         <img class="bg-img" src="/img/hero-bg.jpg" alt="Testimonial BG">
         <div class="container" data-aos="fade-up">
 
@@ -511,19 +511,19 @@
                     <div class="footer-nav">
                         <!-- Phone Number -->
                         <p class="d-flex mb-3 justify-content-lg-end">
-                            <i class="fs-20 fa-solid fa-phone me-3 text-primary"></i>
+                            <i class="fs-20 fa-solid fa-phone me-3"></i>
                             <a class="link" title="Footer Phone Number" href="tel:+11111111111"> +1 (111) 111-1111 </a>
                         </p>
 
                         <!-- Location -->
                         <p class="d-flex justify-content-lg-end">
-                            <i class="fa-solid fa-location-dot fs-20 me-3 text-primary"></i>
+                            <i class="fa-solid fa-location-dot fs-20 me-3"></i>
                             <span> Location</span>
                         </p>
 
                         <!-- Facebook -->
                         <a title="Facebook Navigation" class=" d-flex align-items-center justify-content-lg-end link"
-                            target="_blank" href="#"><i class="fs-22 fa-brands fa-facebook me-3 text-primary"></i>
+                            target="_blank" href="#"><i class="fs-22 fa-brands fa-facebook me-3"></i>
                             Facebook</a>
 
                     </div>
