feat: fixed services naming convention

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <div class="img-side">
-                    <img src="/img/service-1.jpg" alt="">
+                    <img src="/img/hero-main-img.jpeg" alt="Hero Img">
                 </div>
 
             </div>
@@ -263,9 +263,9 @@
                 <div class="service">
                     <div class="info-div">
                         <div class="icon-div">
-                            <img src="/img/lawn-specialist-icon.png" alt="service 1 icon">
+                            <img src="/img/service-1-icon.png" alt="service 1 icon">
                         </div>
-                        <img class="bg-icon" src="/img/lawn-specialist-icon.png" alt="service 1 icon">
+                        <img class="bg-icon" src="/img/service-1-icon.png" alt="service 1 icon">
                         <h4 class="service-name">Lawn Care</h4>
                     </div>
                     <div class="img-div">
@@ -280,9 +280,9 @@
                 <div class="service">
                     <div class="info-div">
                         <div class="icon-div">
-                            <img src="/img/lawn-mower-icon.png" alt="service 2 icon">
+                            <img src="/img/service-2-icon.png" alt="service 2 icon">
                         </div>
-                        <img class="bg-icon" src="/img/lawn-mower-icon.png" alt="service 2 icon">
+                        <img class="bg-icon" src="/img/service-2-icon.png" alt="service 2 icon">
                         <h4 class="service-name">Lawn Mowing</h4>
                     </div>
                     <div class="img-div">
@@ -297,9 +297,9 @@
                 <div class="service">
                     <div class="info-div">
                         <div class="icon-div">
-                            <img src="/img/sprinkler-icon.png" alt="service 3 icon">
+                            <img src="/img/service-3-icon.png" alt="service 3 icon">
                         </div>
-                        <img class="bg-icon" src="/img/sprinkler-icon.png" alt="service 3 icon">
+                        <img class="bg-icon" src="/img/service-3-icon.png" alt="service 3 icon">
                         <h4 class="service-name">Sprinkler Installation</h4>
                     </div>
                     <div class="img-div">
@@ -314,9 +314,9 @@
                 <div class="service">
                     <div class="info-div">
                         <div class="icon-div">
-                            <img src="/img/tree-icon.png" alt="service 4 icon">
+                            <img src="/img/service-4-icon.png" alt="service 4 icon">
                         </div>
-                        <img class="bg-icon" src="/img/tree-icon.png" alt="service 4 icon">
+                        <img class="bg-icon" src="/img/service-4-icon.png" alt="service 4 icon">
                         <h4 class="service-name">Landscaping</h4>
                     </div>
                     <div class="img-div">
@@ -331,9 +331,9 @@
                 <div class="service">
                     <div class="info-div">
                         <div class="icon-div">
-                            <img src="/img/cutting-leaves-icon.png" alt="service 5 icon">
+                            <img src="/img/service-5-icon.png" alt="service 5 icon">
                         </div>
-                        <img class="bg-icon" src="/img/cutting-leaves-icon.png" alt="service 5 icon">
+                        <img class="bg-icon" src="/img/service-5-icon.png" alt="service 5 icon">
                         <h4 class="service-name">Trimming</h4>
                     </div>
                     <div class="img-div">
@@ -348,9 +348,9 @@
                 <div class="service">
                     <div class="info-div">
                         <div class="icon-div">
-                            <img src="/img/leaf-removal-icon.png" alt="service 6 icon">
+                            <img src="/img/service-6-icon.png" alt="service 6 icon">
                         </div>
-                        <img class="bg-icon" src="/img/leaf-removal-icon.png" alt="service 6 icon">
+                        <img class="bg-icon" src="/img/service-6-icon.png" alt="service 6 icon">
                         <h4 class="service-name">Leaf Blowing</h4>
                     </div>
                     <div class="img-div">
@@ -461,7 +461,7 @@
 
     <!-- Testimonials -->
     <section class="testimonials primary-overlay">
-        <img class="bg-img" src="/img/hero-bg.jpg" alt="Testimonial BG">
+        <img class="bg-img" src="/img/testimonials-bg.jpg" alt="Testimonial BG">
         <div class="container" data-aos="fade-up">
 
             <div>
@@ -642,7 +642,7 @@
 
     <!-- Service Areas -->
     <section class="service-areas position-relative py-5 primary-overlay" id="service-areas">
-        <img style="object-position: 80% 50%;" class="bg-img" src="/img/cta-bg.jpg" alt="aerial-view-lawn-mowing">
+        <img style="object-position: 80% 50%;" class="bg-img" src="/img/service-areas-bg.jpg" alt="aerial-view-lawn-mowing">
         <div class="container" data-aos="fade-up">
             <div class="">
                 <p class="sub-header-center text-center text-white">
