--- a/inner-page.html
+++ b/inner-page.html
@@ -194,9 +194,9 @@
                 <div class="service">
                     <div class="info-div">
                         <div class="icon-div">
-                            <img src="/img/lawn-specialist-icon.png" alt="service 1 icon">
+                            <img src="/img/service-1-icon.png" alt="service 1 icon">
                         </div>
-                        <img class="bg-icon" src="/img/lawn-specialist-icon.png" alt="service 1 icon">
+                        <img class="bg-icon" src="/img/service-1-icon.png" alt="service 1 icon">
                         <h4 class="service-name">Lawn Care</h4>
                     </div>
                     <div class="img-div">
@@ -211,9 +211,9 @@
                 <div class="service">
                     <div class="info-div">
                         <div class="icon-div">
-                            <img src="/img/lawn-mower-icon.png" alt="service 2 icon">
+                            <img src="/img/service-2-icon.png" alt="service 2 icon">
                         </div>
-                        <img class="bg-icon" src="/img/lawn-mower-icon.png" alt="service 2 icon">
+                        <img class="bg-icon" src="/img/service-2-icon.png" alt="service 2 icon">
                         <h4 class="service-name">Lawn Mowing</h4>
                     </div>
                     <div class="img-div">
@@ -228,9 +228,9 @@
                 <div class="service">
                     <div class="info-div">
                         <div class="icon-div">
-                            <img src="/img/sprinkler-icon.png" alt="service 3 icon">
+                            <img src="/img/service-3-icon.png" alt="service 3 icon">
                         </div>
-                        <img class="bg-icon" src="/img/sprinkler-icon.png" alt="service 3 icon">
+                        <img class="bg-icon" src="/img/service-3-icon.png" alt="service 3 icon">
                         <h4 class="service-name">Sprinkler Installation</h4>
                     </div>
                     <div class="img-div">
@@ -245,9 +245,9 @@
                 <div class="service">
                     <div class="info-div">
                         <div class="icon-div">
-                            <img src="/img/tree-icon.png" alt="service 4 icon">
+                            <img src="/img/service-4-icon.png" alt="service 4 icon">
                         </div>
-                        <img class="bg-icon" src="/img/tree-icon.png" alt="service 4 icon">
+                        <img class="bg-icon" src="/img/service-4-icon.png" alt="service 4 icon">
                         <h4 class="service-name">Landscaping</h4>
                     </div>
                     <div class="img-div">
@@ -262,9 +262,9 @@
                 <div class="service">
                     <div class="info-div">
                         <div class="icon-div">
-                            <img src="/img/cutting-leaves-icon.png" alt="service 5 icon">
+                            <img src="/img/service-5-icon.png" alt="service 5 icon">
                         </div>
-                        <img class="bg-icon" src="/img/cutting-leaves-icon.png" alt="service 5 icon">
+                        <img class="bg-icon" src="/img/service-5-icon.png" alt="service 5 icon">
                         <h4 class="service-name">Trimming</h4>
                     </div>
                     <div class="img-div">
@@ -279,9 +279,9 @@
                 <div class="service">
                     <div class="info-div">
                         <div class="icon-div">
-                            <img src="/img/leaf-removal-icon.png" alt="service 6 icon">
+                            <img src="/img/service-6-icon.png" alt="service 6 icon">
                         </div>
-                        <img class="bg-icon" src="/img/leaf-removal-icon.png" alt="service 6 icon">
+                        <img class="bg-icon" src="/img/service-6-icon.png" alt="service 6 icon">
                         <h4 class="service-name">Leaf Blowing</h4>
                     </div>
                     <div class="img-div">
@@ -326,7 +326,7 @@
 
                 <!-- Img Side -->
                 <div class="img-div top-right">
-                    <img style="transform: scaleX(-1);" src="/img/about-us-1.jpg" alt="About Us Img 1">
+                    <img src="/img/about-us-2.jpg" alt="About Us Img 1">
 
                     <div class="img-data data-bottom-left">
                         <p class=" highlight">20 Years</p>
@@ -401,7 +401,7 @@
 
     <!-- Testimonials -->
     <section class="testimonials primary-overlay mb-0">
-        <img class="bg-img" src="/img/hero-bg.jpg" alt="Testimonial BG">
+        <img class="bg-img" src="/img/testimonials-bg.jpg" alt="Testimonial BG">
         <div class="container" data-aos="fade-up">
 
             <div>
