--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
         </div>
          <!-- Background Image behind hero sections -->
-         <img class="hero-img" src="/img/mowing-grass.jpg" alt="Hero background Image">
+         <img class="hero-img" src="/img/hero-bg.jpg" alt="Hero background Image">
         <!-- /Hero Section -->
     </section>
 
